--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://shagdarhamza1:pn4vrM6DetQhyhl4@cluster0.oeoglct.mongodb.net/psycapp?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://Madiyar2007:Madiyar2007@cluster0.oeoglct.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
